# Origami

./: .gitignore  ARCHITECTURE.md  README.md  package.json
.claude/hooks/: next-task.sh  reset-counter.sh
.claude/skills/explain/: SKILL.md
.claude/skills/modernize/: SKILL.md
.claude/skills/refactor/: SKILL.md
backend/: .env.example  config.py  main.py  pyproject.toml
backend/notes/: 3e513655-6f2f-41ca-bb3e-fa32ee05dab9.md  bc532984-16e9-4d65-ae8c-f66d1db72069.md  research.md
backend/prompts/: __init__.py  analyze.py  contextualizer.py  final_response.py  review.py  title.py
backend/routes/: chat.py  chats.py  documents.py  notes.py  upload.py
backend/services/: agent.py  chroma.py  embeddings.py  ingest.py  ollama.py  rag.py  text_utils.py
frontend/: .env.example  .gitignore  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/database/: page.tsx
frontend/components/chat/: action-card.tsx  animated-text.tsx  chat-input.tsx  chat-panel.tsx  message.tsx  thought.tsx
frontend/components/database/: database-viewer.tsx
frontend/components/editor/: markdown-editor.tsx
frontend/components/layout/: workspace-layout.tsx
frontend/components/reader/: pdf-reader.tsx
frontend/components/sidebar/: chroma-document-list.tsx  document-drawer.tsx  document-list.tsx  naming-dialog.tsx  note-list.tsx  upload-dropzone.tsx
frontend/components/ui/: scroll-area.tsx  tag-color-picker.tsx
frontend/lib/: tag-colors.ts  theme.tsx  utils.ts
frontend/lib/api/: chats.ts  documents.ts  notes.ts  (+1 more)
frontend/types/: index.ts
(+2 files in other folders)
